fix education 3 column grid issue, but now home, about, and skills page have big gap at bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1097,3 +1097,19 @@ section .container {
     transform: translateX(-50%);
   }
 }
+
+/* Added code for education page */
+
+#education .col-md-4 {
+  flex: 0 0 31.5% !important;
+  max-width: 31.5% !important;
+}
+#education .icon-box {
+  margin: 1 !important;
+  padding: 20px !important;
+}
+
+
+#education {
+  overflow: visible !important;
+}
